--- a/styleloc.css
+++ b/styleloc.css
@@ -1,22 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
+
 *{
-padding:0;
-box-sizing:border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    overflow-x: hidden;
+    background-color: #111827;
+
 }
 
+/* body {
+    font-family: 'Arial', sans-serif;
+} */
 .header {
   background: #6F574D;
   padding: 25px 60px;
   position: sticky;
   top: 0;
+  justify-items: center;
   z-index: 100;
 }
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 10px;
   line-height: 20px;
- 
+  max-width: 1200px;
+    gap: 200px;
 }
 .logo{
     display:flex;
@@ -24,35 +36,32 @@ box-sizing:border-box;
     gap:12px;
 }
 .logo-img{
-    width:45px;
-    height:45px;
+    width:55px;
+    height:50px;
     object-fit:contain;
-    background-color: #ffffff;
-    border-radius: 20px;
+    background-color: #846358;
+    border-radius: 100px;
 }
-.logo-text{
+.logo-text a{
     font-size:20px;
     font-weight:bold;
     color:#ffffff;
     font-family: DM Sans, system-ui, sans-serif;
     line-height:1.2;
-}
+        text-decoration: none;
 
-.logo-text span{
+}
+.logo-text a span{
     color:#eaddd7;
     font-size:12px;
 }
-.navbar{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-}
-
 .nav-optionss {
   list-style: none;
   display: flex;
   gap: 30px;
 text-align: center;
+    font-family: DM Sans, system-ui, sans-serif;
+
 }
 .nav-optionss a {
   color: #eaddd7;
@@ -60,6 +69,7 @@ text-align: center;
   font-size: 15px;
   margin-bottom: 10px;
   padding: 5px;
+  font-weight: 600;
 }
 .nav-optionss a:hover {
   color: #ffffff;
@@ -67,21 +77,23 @@ text-align: center;
 .oo-btn{
      display: inline-block;
     padding: 10px 20px;
-    background-color:#ffffff ;
+    background-color:white ;
     color: #6F574D;
     text-decoration: none;
     border-radius: 200px;
+        font-family: DM Sans, system-ui, sans-serif;
+
 }
 .oo-btn:hover{
-    background-color: #ede7e5;
+    background-color: #b3a7a3;
 }
 .title{
     background:#6F574D;
-    padding:40px 60px;
+    padding:100px 60px;
 }
 .locations{
     background:#020817;
-    padding:0px 60px;
+    padding:100px 60px;
     color:white;
 }
 
@@ -100,181 +112,124 @@ text-align: center;
     color:#eaddd7;
     margin-top:10px;
     font-size: 18px;
-    line-height: 1.555;
-    font-family: DM Sans, system-ui, sans-serif;
-    text-align: center;
+    font-family: DM Sans, system-ui, sans-serif;;
 }
 
-body{
-background:#020817;
-color:white;
-font-family:'DM Sans',sans-serif;
+.locations-grid{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    gap:30px;
+    max-width:1300px;
+    margin:auto;
 }
 
-h1,h2,h3{
-font-family:'Playfair Display',serif;
+.location-card{
+    background:#111c2e;
+    border-radius:20px;
+    overflow:hidden;
+}
+.location-img{
+    position:relative;
+    overflow:hidden;
 }
 
-body{
-font-family:'DM Sans',sans-serif;
-background:#020b18;
-color:white;
-}
-
-.container{
+.location-img img{
     width:100%;
-    max-width:1400px;
-    margin:0 auto;
-}
-.head1{
-    padding-top: 80px;
-}
-.menu-section{
-padding-bottom: 80px;
-padding-left: 130px;
-padding-right: 130px;
-}
-.section-heading h1{
-font-family:'Playfair Display',serif;
-font-size:42px;
-margin-top: 0px;
-}
-.menu-category{
-    margin-top:35px;
+    height:260px;
+    object-fit:cover;
+    transition:transform .5s ease;
 }
 
-.menu-category h2{
-    margin-bottom:8px;
+.location-card:hover img{
+    transform:scale(1.08);
+}
+.flagship{
+    position:absolute;
+    display: block;
+    top:18px;
+    left:18px;
+    background:#facc15;
+    color:rgb(255, 255, 255);
+    padding:6px 14px;
+    border-radius:20px;
+    font-size:13px;
+    font-weight:600;
 }
 
-.menu-category p{
-    margin-bottom:20px;
-}
-
-.menu-grid{
-    margin-bottom:10px;
-}
-
-.section-heading p{
-color:#9ca3af;
+.location-content{
+    padding:25px;
 
 }
-.menu-grid{
-display:grid;
-grid-template-columns:repeat(3,1fr);
-gap:35px;
-}
-.menu-card{
-background:#0f1b2d;
-border-radius:18px;
-overflow:hidden;
-position:relative;
-}
 
-.menu-card:hover{
-background-color: #3e4146;
-}
-.menu-card img{
-width: 384px;;
-height:384px;
-object-fit:cover;
-transition:.4s;
-}
-
-.menu-card:hover img{
-transform:scale(1.08);
-}
-.badge{
-position:absolute;
-top:15px;
-right:15px;
-background:#facc15;
-color:black;
-padding:6px 14px;
-border-radius:20px;
-font-size:13px;
-font-weight:600;
-}
-.menu-info{
-padding:22px;
-}
-
-.menu-header{
-display:flex;
-justify-content:space-between;
-align-items:center;
-margin-bottom:8px;
-}
-
-.menu-header h3{
-font-family:'Playfair Display',serif;
-font-size:22px;
-}
-
-.menu-header span{
-color:#d4a48f;
-font-weight:600;
-}
-
-.menu-info p{
-color:#9ca3af;
-font-size:14px;
-}
-.cta-order{
-    background:#0b1c2e;
-    padding:100px 20px;
-    text-align:center;
-}
-.cta-container{
-    max-width:800px;
-    margin:0 auto;
-}
-.cta-order h2{
-    font-family:"Playfair Display", serif;
-    font-size:48px;
-    color:#ffffff;
+.location-content h2{
+    font-family:'Playfair Display', serif;
     margin-bottom:15px;
 }
 
-.cta-order p{
+.location-content p{
     color:#9ca3af;
-    font-size:18px;
-    margin-bottom:40px;
+    font-size:14px;
+    margin-bottom:10px;
+    font-family: DM Sans, system-ui, sans-serif;
 }
-.cta-buttons{
-    display:flex;
-    justify-content:center;
-    gap:20px;
-    flex-wrap:wrap;
+
+.location-tags{
+    margin:18px 0;
 }
-.order-btn{
-    background:#aa8f84;
-    color:white;
-    padding:14px 32px;
-    border-radius:40px;
+
+.location-tags span{
+    background:#2a3347;
+    padding:6px 12px;
+    color: #d1b5a7;
+    border-radius:20px;
+    font-size:12px;
+    margin-right:8px;
+    display:inline-block;
+    margin-bottom:6px;
+    font-weight: 500;
+    font-family: DM Sans, system-ui, sans-serif;
+}
+
+.direction{
+    color:#d1b5a7;
     text-decoration:none;
     font-weight:600;
-    transition:.3s;
+        font-size:14px;
+
+    font-family: DM Sans, system-ui, sans-serif;
+
 }
 
-.order-btn:hover{
-    background:#6F574D;
-}
-
-.location-btn{
-    border:2px solid #6F574D;
+.direction:hover{
     color:white;
-    padding:14px 32px;
-    border-radius:40px;
-    text-decoration:none;
-    font-weight:600;
-    transition:.3s;
 }
 
-.location-btn:hover{
-    background:#f5e9df;
-    color: black;
+.inquiries{
+    text-align: center;
+    background-color: #111827;
+    padding: 64px 32px;
 }
+.inquiries h1{
+    color: white;
+    font-family: Playfair Display, Georgia, serif;
+}
+.inquiries p{
+    color: #9CA3AF;
+    margin-top: 16px;
+    margin-bottom: 30px;
+    font-family: DM Sans, system-ui, sans-serif;
+}
+.contact-btn{
+    
+  width: 10%;
+  padding: 12px ;
+  background: #846358;
+  border: none;
+  color: #ffffff;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 60px;
+  }
 .footer{
     background-color:  #6F574D;
     color: #f5e9df;
@@ -407,37 +362,18 @@ gap: 12px;
     font-size: 28px;
     color: white;
 }
+@media (max-width:992px){
 
-@media(max-width:1000px){
-.product-grid,
-.sub-grid{
-grid-template-columns:repeat(2,1fr);
-}
-
-.gift-container{
-flex-direction:column;
-}
+.nav-optionss{
+    display:none;
 }
 
-@media(max-width:600px){
-.product-grid,
-.sub-grid{
-grid-template-columns:1fr;
-}
+.locations-heading h1{
+    font-size:38px;
 }
 
-@media(max-width:992px){
-.menu-grid{
-grid-template-columns:repeat(2,1fr);
-}
+.header{
+    padding:20px;
 }
 
-@media(max-width:600px){
-.menu-grid{
-grid-template-columns:1fr;
-}
-
-.section-heading h1{
-font-size:32px;
-}
 }
