--- a/full-menu.css
+++ b/full-menu.css
@@ -22,22 +22,23 @@ box-sizing:border-box;
     display:flex;
     align-items:center;
     gap:12px;
+    
 }
 .logo-img{
-    width:45px;
-    height:45px;
+    width:55px;
+    height: 45px;
     object-fit:contain;
     background-color: #ffffff;
-    border-radius: 20px;
+    border-radius: 50%;
 }
-.logo-text{
+.logo-text a{
     font-size:20px;
     font-weight:bold;
     color:#ffffff;
     font-family: DM Sans, system-ui, sans-serif;
     line-height:1.2;
+    text-decoration: none;
 }
-
 .logo-text span{
     color:#eaddd7;
     font-size:12px;
@@ -47,7 +48,6 @@ box-sizing:border-box;
     justify-content:space-between;
     align-items:center;
 }
-
 .nav-optionss {
   list-style: none;
   display: flex;
