--- a/style.css
+++ b/style.css
@@ -13,26 +13,26 @@ html{
 }
 body {
     background-color: #111827;
-    transition-duration:1.4s;
 }
-  
+
 #header {
   background: #111827;
   padding: 25px 0px;
   top: 0;
   z-index: 100;
   justify-items: center;
-    position: fixed !important;
+    position: fixed ;
     justify-items: center;
-    width: 1600px;
-    
+        width: 100%;
 
 }
 .navbar {
   display: flex;
   justify-content: space-between;
   line-height: 20px;
-  gap: 200px;
+  gap: 100px;
+  width: 1200px; ;
+
 }
 .logo{
     display:flex;
@@ -41,10 +41,11 @@ body {
 }
 .logo-img{
     width:55px;
-    height:50px;
+    height:45px;
     object-fit:fill;
     background-color: #846358;
-    border-radius: 100%;
+    border-radius: 50%;
+    color: white;
 }
 
 .logo-text a{
@@ -410,8 +411,8 @@ justify-content: center;
   font-family: playfair display, georgia, serif;
   font-size: 1.2rem;
   margin-bottom: 5px;
-text-align: center;
-    }
+  text-align: center;
+}
 .txt {
     font-size: .75rem;
     line-height: 1.33;
@@ -427,7 +428,6 @@ text-align: center;
      margin-left: 45px;
      margin-bottom: 14px;
      font-weight: 300;
-
 }
 .about-text h2{
     color: #ffffff;
@@ -463,12 +463,12 @@ p.para{
 }
 
 
-    #origin{
+#origin{
         background-color: #030712;
         color: #ffffff;
         padding: 100px 20px;
     }
-    .origin-content h1{
+ .origin-content h1{
         font-size: 50px;
         margin-bottom: 10px;
         text-align: center;
@@ -515,13 +515,12 @@ p.para{
 justify-self: center;
 margin-bottom: 20px;
     position:absolute;
-    margin-top: 30px;
-    margin-left:80px;
+    margin-top: 15px;
+    margin-left:70px;
     font-size: 14px;
     color: rgb(210, 186, 176);
     font-family: Playfair Display, Georgia, serif;
 }
-
 .txtcir1{
     font-size: 14px;
     color: rgb(210, 186, 176);
@@ -529,8 +528,8 @@ margin-bottom: 20px;
     justify-self: center;
     margin-bottom: 20px;
     position:absolute;
-    margin-top: 30px;
-    margin-right:80px;
+    margin-top: 15px;
+    margin-right:60px;
 }
 .origin-steps{
     display: grid;
@@ -576,8 +575,8 @@ margin-bottom: 20px;
 .circle1{
     grid-column:1;
     justify-self:right;
-    width:72px;
-    height:72px;
+    width: 48px;
+    height:48px;
     border-radius:50%;
     background:#1f2937;
     display:flex;
@@ -586,6 +585,9 @@ margin-bottom: 20px;
     font-size:26px;
     position:relative;
     z-index:1;
+}
+.circle1 img{
+    margin-left: 15px;
 }
 
 .circle1::after{
@@ -596,13 +598,13 @@ margin-bottom: 20px;
     border-radius:50%;
     background:#c7b1a7;
     border:3px solid #020817;
-    left:85%;
+    left:70%;
 }
 .circle2{
     grid-column:2;
     justify-self:left;
-    width:72px;
-    height:72px;
+    width:48px;
+    height:48px;
     border-radius:50%;
     background:#1f2937;
     display:flex;
@@ -621,13 +623,16 @@ margin-bottom: 20px;
     border-radius:50%;
     background:#c7b1a7;
     border:3px solid #020817;
-    right:85%;
+    right: 70%;
+}
+.circle2 img{
+    margin-right: 15px;
 }
 .circle3{
     grid-column:1;
     justify-self:right;
-    width:72px;
-    height:72px;
+    width:48px;
+    height:48px;
     border-radius:50%;
     background:#1f2937;
     display:flex;
@@ -646,13 +651,16 @@ margin-bottom: 20px;
     border-radius:50%;
     background:#c7b1a7;
     border:3px solid #020817;
-    left:85%;
+    left:70%;
+}
+.circle3 img{
+    margin-left: 15px;
 }
 .circle4{
     grid-column:2;
     justify-self:left;
-    width:72px;
-    height:72px;
+    width:48px;
+    height:48px;
     border-radius:50%;
     background:#1f2937;
     display:flex;
@@ -666,14 +674,16 @@ margin-bottom: 20px;
 .circle4::before{
     content:"";
     position:relative;
-    width:14px;
+    width: 14px;
     height:14px;
     border-radius:50%;
     background:#c7b1a7;
     border:3px solid #020817;
-    right:85%;
+    right:70%;
 }
-
+.circle4 img{
+    margin-right: 15px;
+}
 .take-home {
     background: #7b5e4e;
     padding: 100px 60px;
@@ -691,6 +701,7 @@ margin-bottom: 20px;
 .take-home-heading p {
     color: #f3e8e2;
     font-size: 18px;
+    font-family: DM Sans, system-ui, sans-serif ;
 }
 .takehome-items {
     display: grid;
@@ -713,16 +724,25 @@ margin-bottom: 20px;
 .product-card {
     background: #846358;
     border-radius: 20px;
-    overflow:visible;
-    transition: 0.3s ease;
+}
+.product-card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  transition: 0.4s;
+}
+.product-card:hover img {
+  transform: scale(1.08);
 }
 .product-card:hover {
-    transform: translateY(-8px);
+    background-color: #8a6a58;
 }
 .best {
     position: absolute;
+    display: block;
     top: 20px;
     left: 20px;
+    z-index: 2;
     background: #facc15;
     color: white;
     padding: 6px 14px;
@@ -739,11 +759,13 @@ margin-bottom: 20px;
     font-size: 22px;
     margin-bottom: 8px;
     font-weight: 600;
+    font-family: "Playfair Display", serif;
 }
 .takehome-content p {
     font-size: 14px;
     color: #f3e8e2;
     margin-bottom: 20px;
+    font-family: DM Sans, system-ui, sans-serif; ;
 }
 .tkprice {
     display: flex;
@@ -754,10 +776,11 @@ margin-bottom: 20px;
     font-size: 16px;
     font-weight: 600;
     font-family: DM Sans, system-ui, sans-serif;
+    color: #e2d6d1;
 }
-.price span {
+.price small {
     font-size: 14px;
-    font-weight: normal;
+    font-weight: 300;
     color: #e2d6d1;
     font-family: DM Sans, system-ui, sans-serif;
 }
@@ -789,9 +812,6 @@ margin-bottom: 20px;
     border-radius:20px 20px 0 0;
 }
 
-.img-wraper img{
-    transition: transform .4s ease;
-}
 
 .product-card:hover img{
     transform:scale(1.08);
@@ -815,10 +835,13 @@ margin-bottom: 20px;
     font-family: DM Sans, system-ui, sans-serif;
     font-weight: 500;
 }
+.sac-btn:hover{
+    background-color: #e2d6d1;
+    color: #6F574D;
+}
 .product-card {
     background: #846358;
     border-radius: 20px;
-    transition: all 0.35s ease;
     position: relative;
 }
 
@@ -871,6 +894,9 @@ margin-bottom: 20px;
 font-family: "DM Sans", system-ui, sans-serif !important;
 font-weight: 600;
 font-size: 16px;
+}
+.review{
+    margin-bottom: 15px;
 }
 .cards span{
     color: #676E7C;
@@ -930,11 +956,11 @@ font-size: 16px;
         font-family: DM Sans, system-ui, sans-serif;
     }
     .jcimg{
-    width: 64px;
-    height: 64px;
-    background-color: #938f8d;
-    padding: 15px;
-    border-radius: 45%;
+    width: 90px;
+    height: 80px;
+    background-color: #1f2937;
+    padding: 20px;
+    border-radius: 50%;
     }
     .input{
   width: 25%;
@@ -994,7 +1020,6 @@ font-size: 16px;
     color:#ddcdc3 ;
     margin-bottom:8px ;
     font: size 14px;
-    transition: 0.3s;
     line-height: 1.27/.875;
 }
 .footer a:hover{
@@ -1046,7 +1071,6 @@ gap: 12px;
     background-color: #8a6a58;
     padding: 8px;
     border-radius: 50%;
-    transition: 0.3s;
     margin-top: 10px;
 }
 .social-icons img:hover{
