--- a/styleshop.css
+++ b/styleshop.css
@@ -8,18 +8,19 @@
 
 .header {
   background: #6f574d;
-  padding: 0px 60px;
+  padding: 25px 60px;
   position: sticky;
   top: 0;
+  justify-items: center;
   z-index: 100;
 }
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 110px;
   line-height: 20px;
-  background-color: #6f574d;
+  max-width: 1200px;
+  gap: 200px;
 }
 .logo {
   display: flex;
@@ -89,7 +90,7 @@
 
 .title {
   background: #6f574d;
-  padding: 100px 60px;
+  padding: 80px 0px;
 }
 .locations {
   background: #020817;
@@ -124,6 +125,10 @@ h1,
 h2,
 h3 {
   font-family: "Playfair Display", serif;
+}
+h2{
+    font-size: 30px;
+    margin-bottom: 20px;
 }
 .container {
   max-width: 1200px;
@@ -235,6 +240,9 @@ button:hover {
   border-radius: 40px;
   cursor: pointer;
 }
+.gift-values span:hover{
+    background-color: #A18072;
+}
 
 .primary-btn {
   padding: 14px 28px;
@@ -304,9 +312,7 @@ button:hover {
   color: #f5e9df;
   padding: 80px 40px;
   font-family:
-    DM Sans,
-    system-ui,
-    sans-serif;
+    DM Sans,system-ui,sans-serif;
   font-size: 14px;
 }
 .full-footer {
@@ -319,9 +325,7 @@ button:hover {
   margin-bottom: 5px;
   font-size: 16px;
   font-family:
-    DM Sans,
-    system-ui,
-    sans-serif;
+    DM Sans,system-ui,sans-serif;
 }
 .footer p {
   line-height: 1.5;
@@ -342,8 +346,9 @@ button:hover {
   color: #ddcdc3;
   margin-bottom: 8px;
   font: size 14px;
-  transition: 0.3s;
+  
   line-height: 1.27/0.875;
+  
 }
 .footer a:hover {
   color: white;
@@ -394,7 +399,7 @@ button:hover {
   background-color: #8a6a58;
   padding: 8px;
   border-radius: 50%;
-  transition: 0.3s;
+ 
   margin-top: 10px;
 }
 .social-icons img:hover {
