--- a/style.css
+++ b/style.css
@@ -1043,6 +1043,9 @@ h2 {
   border-radius: 60px;
   margin-left: 20px;
 }
+.join-btn:hover{
+  background-color: #7b5e4e;
+}
 
 /* ------------------------------------------*/
 .footer {
@@ -1298,12 +1301,15 @@ h2 {
   .join-club {
     padding: 80px 20px;
   }
+
   .input {
-    width: 30%;
+    width: 100%;
     margin-bottom: 15px;
+    max-width: fit-content;
   }
   .join-btn {
-    width: 20%;
+    width: 50%;
+    max-width: fit-content;
   }
   .footer {
     padding: 50px 20px;
@@ -1434,4 +1440,4 @@ img {
     .oo-btn{
       white-space: nowrap;
     }
-}
+  }
