--- a/styleloc.css
+++ b/styleloc.css
@@ -89,7 +89,8 @@ text-align: center;
 }
 .title{
     background:#6F574D;
-    padding: 80px; 
+    padding: 80px;
+    margin-top: 30px; 
 }
 .locations{
     background:#020817;
