--- a/styleloc.css
+++ b/styleloc.css
@@ -145,16 +145,21 @@ text-align: center;
     transform:scale(1.08);
 }
 .flagship{
-    position:absolute;
-    display: block;
-    top:18px;
-    left:18px;
-    background:#facc15;
-    color:rgb(255, 255, 255);
-    padding:6px 14px;
-    border-radius:20px;
-    font-size:13px;
-    font-weight:600;
+     position: absolute;
+  display: block;
+  top: 20px;
+  left: 20px;
+  z-index: 2;
+  background: #facc15;
+  color: white;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  font-family:
+    DM Sans,
+    system-ui,
+    sans-serif;
 }
 
 .location-content{
