--- a/styleshop.css
+++ b/styleshop.css
@@ -202,15 +202,16 @@ button:hover {
 .badge {
   position: absolute;
   display: block;
+  z-index: 2;
   top: 15px;
   left: 15px;
   background: #facc15;
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 6px 14px;
   border-radius: 20px;
   font-size: 14px;
   font-weight: 600;
-}
+} 
 .gift {
   padding: 100px 20px;
 }
